refactor src / test and configuration management
Add size limit to inline data and uploading files (xml and spatial files )
